Fixed country table width on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@ img{ margin-top: 10px; margin-bottom: 50px;}
     color: rgb(255, 255, 255);
     font-size: 9px;
 }
-#country-tb{width: 90.5%;table-layout: fixed;border: 1px solid rgba(221, 152, 152, 0.548);
+#country-tb{width: 94.5%;table-layout: fixed;border: 1px solid rgba(221, 152, 152, 0.548);
     border-collapse: collapse;}
 #td-confirmed-cases,#td-active-cases,#td-recoveries,#td-deaths{
     background-color:rgba(61, 72, 108, 0.507);
@@ -94,7 +94,7 @@ header {
     padding-bottom: 50px;
 }
 .holder,#data-holder,td,th{
-    border: 1px solid rgba(221, 152, 152, 0.548);
+    border: 1px solid rgba(235, 174, 174, 0.452);
     border-collapse: collapse;
     width:95%;
     margin:0 auto;
